force-app/main/default/objects/Expense_Line__c/Expense_Line__c.object-meta.xml
<CustomObject>
    <description>Object used to track individual expense line items including expense type, amount, city, travel class, and bill attachment status. Each line belongs to an Expense record.</description>
    <label>Expense Line</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Expense Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>