force-app/main/default/objects/Expense_Line__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <type>TextArea</type>
</CustomField>