force-app/main/default/objects/Expense_Line__c/fields/Miscellaneous_Cost__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Cost__c</fullName>
    <label>Miscellaneous Cost</label>
    <type>TextArea</type>
</CustomField>