force-app/main/default/objects/Expense_Line__c/fields/Punch_Record__c.field-meta.xml
<CustomField>
    <fullName>Punch_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punch Record</label>
    <referenceTo>Punch_Record__c</referenceTo>
    <relationshipLabel>Expense Lines</relationshipLabel>
    <relationshipName>Expense_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>